--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
-main.pdf
+dissertation.pdf
+.dissertation.log
+.logged
+endmatter/colophon.aux
+dissertation.lof
+dissertation.synctex.gz
+dissertation.pdfsync
+*.aux
+*.blg
+*.out
+*.gz(busy)
+*.toc
+*.log
+*.fdb_latexmk
+*.bbl
 
 ## Core latex/pdflatex auxiliary files:
 *.aux
