Cleaned up title and code layout.

--- a/abjadbook.cfg
+++ b/abjadbook.cfg
@@ -1,7 +1,6 @@
 [latex]
 before = 
-    \vspace{-\parskip}
     \begin{singlespacing}
+    \vspace{-0.5\baselineskip}
 after =
     \end{singlespacing}
-    \vspace{-\parskip}
