Improved graphics layout everywhere.

--- a/abjadbook.cfg
+++ b/abjadbook.cfg
@@ -4,4 +4,8 @@ before =
     \vspace{-0.5\baselineskip}
 after =
     \end{singlespacing}
-graphviz = scale=0.333
+graphviz =
+    max width=\textwidth,
+    scale=0.333,
+lilypond = 
+    max width=\textwidth,
