Modernized abjad-book configuration.

--- a/abjadbook.cfg
+++ b/abjadbook.cfg
@@ -1,11 +1,13 @@
 [latex]
-before = 
+before-code-block = 
     \begin{singlespacing}
     \vspace{-0.5\baselineskip}
-after =
+before-includegraphics =
+after-includegraphics =
+after-code-block =
     \end{singlespacing}
-graphviz =
+graphviz-options =
     max width=\textwidth,
     scale=0.333,
-lilypond = 
+lilypond-options = 
     max width=\textwidth,
