Proofed time-tools.

--- a/abjadbook.cfg
+++ b/abjadbook.cfg
@@ -8,6 +8,6 @@ after-code-block =
     \end{singlespacing}
 graphviz-options =
     max width=\textwidth,
-    scale=0.333,
+    scale=0.4
 lilypond-options = 
     max width=\textwidth,
