Preparing for re-generating abjad-book output blocks.

--- a/abjadbook.cfg
+++ b/abjadbook.cfg
@@ -11,3 +11,5 @@ graphviz-options =
     scale=0.4
 lilypond-options = 
     max width=\textwidth,
+output-start-delimiter = \begin{abjadbookoutput}
+output-stop-delimiter = \end{abjadbookoutput}
