Improved scaling of all graphviz assets.

--- a/abjadbook.cfg
+++ b/abjadbook.cfg
@@ -7,8 +7,8 @@ after-includegraphics =
 after-code-block =
     \end{singlespacing}
 graphviz-options =
+    scale=0.4,
     max width=\textwidth,
-    scale=0.5
 lilypond-options = 
     max width=\textwidth,
 output-start-delimiter = \begin{abjadbookoutput}
